--- a/main.css
+++ b/main.css
@@ -65,3 +65,11 @@ body{
   -moz-transition:-moz-border-radius 1s,opacity 1s,border 1s,padding 1s;
 
 }
+
+
+#img_profile #social_link img{
+	position: relative;
+	top:320px;
+	width:50px;
+	margin: -4px;
+}
