--- a/main.css
+++ b/main.css
@@ -56,13 +56,21 @@ body{
 	-webkit-border-radius:100%;
    -webkit-radial-gradient(white,grey);
   -webkit-radial-gradient: red,white;
-  color:rgba(255,255,255,0.7);
-  -webkit-transition:-webkit-border-radius 1s,opacity 1s,border 1s,padding 1s;
+  border-radius:100%;
+   radial-gradient(white,grey);
+  radial-gradient: red,white;
   -moz-border-radius:100%;
    -moz-radial-gradient(white,grey);
   -moz-radial-gradient: red,white;
+  -o-border-radius:100%;
+   -o-radial-gradient(white,grey);
+  -o-radial-gradient: red,white;
+  color:rgba(255,255,255,0.7);
+  -webkit-transition:-webkit-border-radius 1s,opacity 1s,border 1s,padding 1s;
+  transition:border-radius 1s,opacity 1s,border 1s,padding 1s;
   -moz-transition:-moz-border-radius 1s,opacity 1s,border 1s,padding 1s;
-
+  -o-transition:-o-border-radius 1s,opacity 1s,border 1s,padding 1s;
+ 
 }
 
 #img_profile #social_link img{
@@ -90,6 +98,8 @@ body{
 	padding:20px;
 	-webkit-border-radius:15px;
 	-moz-border-radius:15px;
+	border-radius:15px;
+	-o-border-radius:15px;
 }
 
 .first_section #text_side #quotes #author{
