--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@ body{
 }
 
 .first_section{
-  height:100%;
-  width: 100%;
+  height:660px;/*100%*/
+  width: 1360px;/*100%*/	
   background-color:#43474b;
   color:#ddfbfb;
 
@@ -19,8 +19,8 @@ body{
 
 .first_section #nav_first {
 	position:absolute;
-	top: 3%;
-	right: 10%;	
+	top: 19.8px;
+	right: 136px;	
 }
 
 .first_section #nav_first a{
@@ -41,9 +41,9 @@ body{
 	display: block;
 	float: left;
 	position: absolute;
-	top:15%;
-	width: 30%;
-	height: 85%;
+	top:99px;
+	width: 408px;
+	height: 561px;
 	border-right:3px solid white;
 
 } 
@@ -56,21 +56,13 @@ body{
 	-webkit-border-radius:100%;
    -webkit-radial-gradient(white,grey);
   -webkit-radial-gradient: red,white;
-  border-radius:100%;
-   radial-gradient(white,grey);
-  radial-gradient: red,white;
+  color:rgba(255,255,255,0.7);
+  -webkit-transition:-webkit-border-radius 1s,opacity 1s,border 1s,padding 1s;
   -moz-border-radius:100%;
    -moz-radial-gradient(white,grey);
   -moz-radial-gradient: red,white;
-  -o-border-radius:100%;
-   -o-radial-gradient(white,grey);
-  -o-radial-gradient: red,white;
-  color:rgba(255,255,255,0.7);
-  -webkit-transition:-webkit-border-radius 1s,opacity 1s,border 1s,padding 1s;
-  transition:border-radius 1s,opacity 1s,border 1s,padding 1s;
   -moz-transition:-moz-border-radius 1s,opacity 1s,border 1s,padding 1s;
-  -o-transition:-o-border-radius 1s,opacity 1s,border 1s,padding 1s;
- 
+
 }
 
 #img_profile #social_link img{
@@ -83,27 +75,25 @@ body{
 .first_section #text_side {
 	position: absolute;
 	display: block;
-	top: 15%;
-	width:60%;
-	left:40%;
+	top: 100px;
+	width:700px;
+	left:500px;
 }
 
 .first_section #text_side #quotes {
 	position: relative;
 	z-index: 4;
 	top: 20px;
-	width:81%;
-	height: 10%;
+	width:650px;
+	height: 60px;
 	background-color:black;
 	padding:20px;
 	-webkit-border-radius:15px;
 	-moz-border-radius:15px;
-	border-radius:15px;
-	-o-border-radius:15px;
 }
 
 .first_section #text_side #quotes #author{
 	position: relative;
-	width: 50%;
+	width: 200px;
 	right:-400px;
 }
