--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -7,52 +7,33 @@ body{
 	margin: 0.2%;
 }
 
-.first_section{
-  height:660px;/*100%*/
-  width: 1360px;/*100%*/	
+.first_section{	
   background-color:#43474b;
   color:#ddfbfb;
-
-  font-family:"tahoma","Times New Roman";
+  width: 100%;
   font-size:16px;
 }
 
 .first_section #nav_first {
-	position:absolute;
-	top: 19.8px;
-	right: 136px;	
+	padding-top: 0.3em;	
+	padding-bottom: 3em;
 }
 
 .first_section #nav_first a{
 	display: inline-block;
-	margin-right: 30px;
 	font-size: 23px;
-}
-
-.first_section #nav_first a:link {text-decoration:none;color:#afc7a4;}
-.first_section #nav_first a:visited {text-decoration:none;color:#afc7a4;}
-.first_section #nav_first a:hover {text-decoration:underline;color:#afc7a4;}
-.first_section #nav_first a:active {text-decoration:underline;color:#afc7a4;}
-.first_section #nav_first a {
 	color: #afc7a4;
 }
 
 #img_profile{
-	display: block;
-	float: left;
-	position: absolute;
-	top:99px;
-	width: 408px;
-	height: 561px;
+	height: 85%;
 	border-right:3px solid white;
-
+	padding-right: 0px;
+	padding-bottom: 0px;
 } 
 
-#img_profile img{
+#img_profile #profile_pic{
 	width:61%;
-	position: absolute;
-	top: 5%;
-	left: 18%;
 	-webkit-border-radius:100%;
    -webkit-radial-gradient(white,grey);
   -webkit-radial-gradient: red,white;
@@ -62,30 +43,19 @@ body{
    -moz-radial-gradient(white,grey);
   -moz-radial-gradient: red,white;
   -moz-transition:-moz-border-radius 1s,opacity 1s,border 1s,padding 1s;
-
 }
 
 #img_profile #social_link img{
-	position: relative;
-	top:320px;
 	width:50px;
-	margin: -4px;
+	padding-top: 1em;
 }
 
-.first_section #text_side {
-	position: absolute;
-	display: block;
-	top: 100px;
-	width:700px;
-	left:500px;
+.first_section #text_side{
+	padding-right: 2em;
+	display: none;
 }
 
-.first_section #text_side #quotes {
-	position: relative;
-	z-index: 4;
-	top: 20px;
-	width:650px;
-	height: 60px;
+.first_section #text_side #quotes {	
 	background-color:black;
 	padding:20px;
 	-webkit-border-radius:15px;
@@ -94,6 +64,12 @@ body{
 
 .first_section #text_side #quotes #author{
 	position: relative;
-	width: 200px;
-	right:-400px;
+	text-align: right;
+}
+
+.first_section #projects .project_icon{
+	background-color: #dcd8dc;
+} 
+.first_section #projects .project_icon p{
+	font-size: 15px;
 }
